src/parser/snapshots/rust_interpreter__parser__test__fn_expr_3.snap
---
source: src/parser/test.rs
description: "fn(x, y, z) { return x; }"
expression: stmts
---
[
    ExpressionStatement(
        Function { params: [Identifier("x"), Identifier("y"), Identifier("z")], body: Block { statements: [Return { value: Identifier("x") }] } },
    ),
]
