src/parser/snapshots/rust_interpreter__parser__test__hash_2.snap
---
source: src/parser/test.rs
description: "{\"foo\": \"bar\"}"
expression: first
---
{"foo": "bar"};
