src/parser/snapshots/rust_interpreter__parser__test__hash_3.snap
---
source: src/parser/test.rs
description: "{\"foo\": \"bar\", \"eggs\": \"spam\"}"
expression: first
---
{"foo": "bar", "eggs": "spam"};
