src/parser/snapshots/rust_interpreter__parser__test__hash_4.snap
---
source: src/parser/test.rs
description: "{true: \"bar\", 2: \"baz\"}"
expression: first
---
{true: "bar", 2: "baz"};
