src/parser/snapshots/rust_interpreter__parser__test__hash_index_1.snap
---
source: src/parser/test.rs
description: "{\"foo\": \"bar\"}[\"foo\"]"
expression: first
---
({"foo": "bar"}["foo"]);
