src/parser/snapshots/rust_interpreter__parser__test__hash_index_2.snap
---
source: src/parser/test.rs
description: "{true: \"bar\", 2: \"baz\"}[true]"
expression: first
---
({true: "bar", 2: "baz"}[true]);
