src/parser/snapshots/rust_interpreter__parser__test__hash_index_3.snap
---
source: src/parser/test.rs
description: "{true: \"bar\", 2: \"baz\"}[1+1]"
expression: first
---
({true: "bar", 2: "baz"}[(1 + 1)]);
