src/parser/snapshots/rust_interpreter__parser__test__if_expr_1.snap
---
source: src/parser/test.rs
description: "if (x < y) { x }"
expression: first
---
if (x < y)
{
	x;
};
