src/parser/snapshots/rust_interpreter__parser__test__if_expr_2.snap
---
source: src/parser/test.rs
description: "if (x < y) { x } else { y }"
expression: first
---
if (x < y)
{
	x;
} else {
	y;
};
