src/parser/snapshots/rust_interpreter__parser__test__if_expr_3.snap
---
source: src/parser/test.rs
description: "if (x < y) { x } else { let z = x + y; z }"
expression: first
---
if (x < y)
{
	x;
} else {
	let z = (x + y);
	z;
};
