src/parser/snapshots/rust_interpreter__parser__test__infix_expr_9.snap
---
source: src/parser/test.rs
description: "\"foo\" != \"bar\""
expression: first
---
("foo" != "bar");
