src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_10.snap
---
source: src/parser/test.rs
description: 5 < 4 != 3 > 4
expression: first
---
((5 < 4) != (3 > 4));
